ジャケット用のコンポーネント作成。コンポーネントに合わせてSlider修正。

--- a/src/app/_components/layouts/slider.module.scss
+++ b/src/app/_components/layouts/slider.module.scss
@@ -1,5 +1,5 @@
 .jacketSlider {
-    display: flex;
+    display: -webkit-box;
     overflow-x: scroll;
     gap: 24px;
     scrollbar-width: none; /* Firefoxでスクロールバーを非表示 */
