--- a/src/app/_components/client/Jacket/style.module.scss
+++ b/src/app/_components/client/Jacket/style.module.scss
@@ -10,6 +10,7 @@
 .jacket::after {
     content: '';
     position: absolute;
+    border-radius: 10px;
     width: 100%;
     height: 100%;
     top: 0;
