--- a/src/app/_components/client/Jacket/jacket.module.scss
+++ b/src/app/_components/client/Jacket/jacket.module.scss
@@ -1,3 +1,11 @@
+.jacketWrapper {
+    display: flex;
+    flex-direction: column;
+    width:200px;
+    gap: 8px;
+    font-size: 14px;
+}
+
 .jacket {
     position: relative;
     cursor: pointer;
@@ -22,4 +30,9 @@
 
 .jacket:hover::after {
     opacity: 1;
+}
+
+.jacketInfo {
+    display: flex;
+    flex-direction: column;
 }
