--- a/src/app/_components/client/Jacket/jacket.module.scss
+++ b/src/app/_components/client/Jacket/jacket.module.scss
@@ -36,3 +36,15 @@
     display: flex;
     flex-direction: column;
 }
+
+.--threeLine {
+    display: -webkit-box;
+    line-clamp: 2;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.--gray {
+    color: var(--gray-10);
+}
