--- a/src/app/_components/client/TrackTable/track-list.module.scss
+++ b/src/app/_components/client/TrackTable/track-list.module.scss
@@ -1,17 +1,3 @@
-.scrollWrapper {
-  overflow: hidden;
-  overflow-x: auto;
-  padding-bottom: 8px;
-  scrollbar-width: none;
-    -ms-overflow-style: none;
-}
-
-.gridContainer {
-  display: flex;
-  gap: 24px;
-  min-width: max-content;
-}
-
 .column {
   background-color: var(--gray-3);
   border-radius: 8px;
@@ -29,7 +15,7 @@
 .row {
   display: grid;
   gap: 16px;
-  grid-template-columns: auto auto 1fr 1fr 1fr;
+  grid-template-columns: auto auto 1fr 1fr auto;
   font-size: var(--font-size-2);
   padding: 10px 12px;
   border-radius: 8px;
