--- a/src/app/_styles/components/blocks/index.module.scss
+++ b/src/app/_styles/components/blocks/index.module.scss
@@ -3,3 +3,16 @@
     flex-direction: column;
     gap: 24px;
 }
+
+.slider {
+    display: -webkit-box;
+    overflow-x: scroll;
+    gap: 24px;
+    scrollbar-width: none; /* Firefoxでスクロールバーを非表示 */
+    -ms-overflow-style: none; /* IE・Edgeでスクロールバーを非表示 */
+    mask-image: linear-gradient(90deg, #060d17 90%, transparent);
+}
+
+.slider::-webkit-scrollbar {
+    display: none; /* Chrome, Safariでスクロールバーを非表示 */
+  }
