--- a/src/app/_components/client/TrackList/track-list.module.scss
+++ b/src/app/_components/client/TrackList/track-list.module.scss
@@ -1,6 +1,6 @@
 .column {
 	background-color: var(--gray-3);
-	border-radius: 8px;
+	border-radius: var(--radius-4);;
 	padding: 8px;
 }
 
@@ -9,7 +9,7 @@
 	gap: 16px;
 	grid-template-columns: auto 1fr auto;
 	padding: 10px 12px;
-	border-radius: 8px;
+	border-radius: var(--radius-4);
 	transition: background-color 0.2s ease;
 	cursor: pointer;
   
