--- a/src/app/_components/server/Genre/genre.module.scss
+++ b/src/app/_components/server/Genre/genre.module.scss
@@ -7,13 +7,13 @@
 }
 
 .genreImg {
-    border-radius: 10px;
+    border-radius: var(--radius-4)
 }
 
 .genre::before {
     content: '';
     position: absolute;
-    border-radius: 10px;
+    border-radius: var(--radius-4);
     width: 100%;
     height: 100%;
     top: 0;
