--- a/src/app/_components/server/Jacket/jacket.module.scss
+++ b/src/app/_components/server/Jacket/jacket.module.scss
@@ -4,13 +4,13 @@
 }
 
 .jacketImg {
-    border-radius: 10px;
+    border-radius: var(--radius-4)
 }
 
 .jacket::after {
     content: '';
     position: absolute;
-    border-radius: 10px;
+    border-radius: var(--radius-4);
     width: 100%;
     height: 100%;
     top: 0;
