--- a/src/app/_components/server/Loading/loading.module.scss
+++ b/src/app/_components/server/Loading/loading.module.scss
@@ -16,7 +16,7 @@
   width: 8px;
   height: 40px;
   background: linear-gradient(180deg, var(--gray-10), var(--gray-5));
-  border-radius: 4px;
+  border-radius: var(--radius-2);
   animation: pulse 1.2s infinite ease-in-out alternate;
 }
 
