--- a/src/app/_components/server/Genre/genre.module.scss
+++ b/src/app/_components/server/Genre/genre.module.scss
@@ -1,6 +1,9 @@
 .genre {
     position: relative;
     cursor: pointer;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,6 +32,8 @@
 
 .genreText {
     position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
     font-size: 1.5rem;
     font-weight: bold;
     opacity: 0;
