--- a/src/app/_components/server/Artist/artist.module.scss
+++ b/src/app/_components/server/Artist/artist.module.scss
@@ -1,6 +1,9 @@
 .artist {
     position: relative;
     cursor: pointer;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
 }
 
 .artistImg {
