--- a/src/app/_components/server/Header/header.module.scss
+++ b/src/app/_components/server/Header/header.module.scss
@@ -1,5 +1,6 @@
 .header {
     z-index: 1000;
+    background-color :var(--color-background);
     display: flex;
     position: fixed;
     justify-content: space-between;
