--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -4,3 +4,5 @@ $breakpoints: (
     "lg": "screen and (min-width: 1000px)",
     "xl": "screen and (min-width: 1200px)",
 ) !default;
+
+$ellipsisLineLength: 3;
