マーキーコンポーネントのstories作成。

--- a/src/app/_components/client/Marquee/marquee.module.scss
+++ b/src/app/_components/client/Marquee/marquee.module.scss
@@ -4,6 +4,12 @@
   position: relative;
 }
 
+.marquee::after {
+  content: "";
+  white-space: nowrap;
+  display: inline-block;
+}
+
 .marquee > .marqueeInner {
   position: absolute;
   top: 0;
