--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,5 +1,5 @@
 $breakpoints: (
-    "sm": "screen and (min-width: 375px)",
+    "sm": "screen and (max-width: 767px)",
     "md": "screen and (min-width: 768px)",
     "lg": "screen and (min-width: 1000px)",
     "xl": "screen and (min-width: 1200px)",
