--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -1,7 +1,16 @@
+@use "../styles/utils/mixins" as *;
+
 .main {
     padding-top: 56px;
 }
 
 .main-inner {
-    padding: 48px 64px 248px;
+
+    @include mq(sm) {
+        padding: 24px 16px 248px;
+    }
+
+    @include mq(md) {
+        padding: 48px 64px 248px;
+    }
 }
