共通スタイルSP化対応

--- a/src/app/_styles/components/wrappers/index.module.scss
+++ b/src/app/_styles/components/wrappers/index.module.scss
@@ -1,5 +1,13 @@
+@use "../../../../styles/utils/mixins" as *;
+
 .pageWrapper {
     display: flex;
     flex-direction: column;
-    gap: 56px;
+
+    @include mq(sm) {
+		gap: 36px;
+    }
+    @include mq(md) {
+       gap: 56px;
+    }
 }
