--- a/src/app/_styles/components/blocks/index.module.scss
+++ b/src/app/_styles/components/blocks/index.module.scss
@@ -1,7 +1,16 @@
+@use "../../../../styles/utils/mixins" as *;
+
 .section {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+
+    @include mq(sm) {
+        gap: 16px;
+	}
+
+    @include mq(md) {
+        gap: 24px;
+	}
 }
 
 .slider {
