--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -1,10 +1,39 @@
+@use "../utils/mixins" as *;
+
 a {
 	text-decoration: none;
 	color: unset;
 }
 
 h1 {
-	font-size: 32px;
+
+	@include mq(sm) {
+		font-size: 24px;
+	}
+
+	@include mq(md) {
+		font-size: 32px;		
+	}
+}
+
+h2 {
+	@include mq(sm) {
+		font-size: 20px;
+	}
+
+	@include mq(md) {
+		font-size: 24px;		
+	}
+}
+
+h3 {
+	@include mq(sm) {
+		font-size: 16px;
+	}
+
+	@include mq(md) {
+		font-size: 20px;		
+	}
 }
 
 :where(.radix-themes) {
