全ページSP対応

--- a/src/app/(static)/artists/[artist_id]/_components/artist-header.module.scss
+++ b/src/app/(static)/artists/[artist_id]/_components/artist-header.module.scss
@@ -1,8 +1,18 @@
+@use "../../../../../styles/utils/mixins" as *;
+
 .artistHeader {
     position: relative;
-    width: 320px;
-    height: 320px;
     margin: auto;
+
+    @include mq(sm) {
+		width: 240px;
+        height: 240px;
+    }
+
+    @include mq(md) {
+		width: 320px;
+    height: 320px;
+	}
 }
 
 .artistText {
