--- a/src/app/_components/server/Header/header.module.scss
+++ b/src/app/_components/server/Header/header.module.scss
@@ -1,3 +1,5 @@
+@use "../../../../styles/utils/mixins" as *;
+
 .header {
     z-index: 1000;
     background-color :var(--color-background);
@@ -60,5 +62,16 @@
 
     .icon {
         display:  block;
+    }
+}
+
+.textField {
+    
+    @include mq(sm) {
+        width: 250px;
+    }
+
+    @include mq(md) {
+        width: 300px;
     }
 }
