--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,3 +1,6 @@
+$loopLength: 8;
+$baseSize: 8;
+
 $breakpoints: (
     "sm": "screen and (max-width: 767px)",
     "md": "screen and (min-width: 768px)",
