区切り線用のスタイル追加

--- a/src/app/(static)/guide/index.module.scss
+++ b/src/app/(static)/guide/index.module.scss
@@ -15,3 +15,10 @@
 		margin-top: 8px;
 	}
 }
+
+.border {
+    width: 100%;
+    border: 1px solid var(--color-panel-solid);
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
