--- a/src/app/(static)/guide/index.module.scss
+++ b/src/app/(static)/guide/index.module.scss
@@ -17,8 +17,6 @@
 }
 
 .border {
-    width: 100%;
-    border: 1px solid var(--color-panel-solid);
-    margin-top: 24px;
-    margin-bottom: 24px;
+    border: 0.5px solid var(--gray-9);
+    margin: var(--space-5) 0; 
 }
