--- a/src/app/(static)/guide/index.module.scss
+++ b/src/app/(static)/guide/index.module.scss
@@ -1,5 +1,3 @@
-
-
 .content {
 
 	ul {
@@ -14,6 +12,10 @@
 	ul > li > ul >li {
 		margin-top: 8px;
 	}
+}
+
+.section {
+	scroll-margin-top: 56px;
 }
 
 .border {
