--- a/src/app/_components/client/FooterPlayer/footer-player.module.scss
+++ b/src/app/_components/client/FooterPlayer/footer-player.module.scss
@@ -7,6 +7,8 @@
 	width: 100%;
 	height: fit-content;
 	bottom: 0;
+	overflow: hidden;
+	transition: height 0.2s ease;
 
 	@include mq(sm) {
 		display: flex;
@@ -16,9 +18,12 @@
 	@include mq(md) {
 		display: flex;
 		flex-direction: row;
-		height: 20vh;
 	}
 	
+}
+
+.footerClose {
+	height: 0px;
 }
 
 .footerMovie {
