--- a/src/app/_components/server/Jacket/jacket.module.scss
+++ b/src/app/_components/server/Jacket/jacket.module.scss
@@ -1,28 +1,46 @@
-.jacket {
+@use "../../../../styles/utils/mixins" as *;
+
+.jacketLink { 
     position: relative;
-    cursor: pointer;
-    width: 100%;
-    height: 0;
-    padding-bottom: 100%;
+    transform-style: preserve-3d;
+    transition: transform .5s;
+    will-change: transform;
+    overflow: hidden;
+    border-radius: var(--radius-4);
+
+    @include mq(sm) {
+		height: 100px;
+	}
+
+	@include mq(md) {
+		height: 200px;
+	}
+}
+
+.jacketLink::after {
+    position: absolute;
+    content: "";
+    background: #fff;
+    opacity: 0.2;
+    top: -30px;
+    left: -190px;
+    width: 300px;
+    height: 30px;
+    transform: rotate(315deg);
+    filter: blur(6px);
+    transition: all 350ms 
 }
 
 .jacketImg {
-    border-radius: var(--radius-4)
-}
-
-.jacket::after {
-    content: '';
-    position: absolute;
     border-radius: var(--radius-4);
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.3);
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
 }
 
-.jacket:hover::after {
-    opacity: 1;
+.jacketLink:hover {
+    transform: perspective(900px) rotateX(20deg) translateZ(10px);
+}
+
+.jacketLink:hover::after {
+    top: 170px;
+    left: 40px;
+    transition: all 350ms 
 }
