--- a/src/app/_components/server/Jacket/jacket.module.scss
+++ b/src/app/_components/server/Jacket/jacket.module.scss
@@ -7,14 +7,8 @@
     will-change: transform;
     overflow: hidden;
     border-radius: var(--radius-4);
-
-    @include mq(sm) {
-		height: 100px;
-	}
-
-	@include mq(md) {
-		height: 200px;
-	}
+    height: 0;
+    padding-bottom: 100%;
 }
 
 .jacketLink::after {
@@ -25,20 +19,10 @@
     transform: rotate(315deg);
     filter: blur(6px);
     transition: all 350ms ;
-
-    @include mq(sm) {
-        top: -5px;
-        left: -80px;
-        width: 150px;
-        height: 10px;
-    }
-    
-    @include mq(md) {
-        top: -30px;
-        left: -190px;
-        width: 300px;
-        height: 30px;
-    }
+    width: calc(100% * 1.41421356237);
+    height: calc(100% * 1.41421356237);
+    top: -120%;
+    left: -120%;
 }
 
 .jacketImg {
@@ -50,14 +34,6 @@
 }
 
 .jacketLink:hover::after {
-
-    @include mq(sm) {
-        top: 90px;
-        left: 15px;
-    }
-
-    @include mq(md) {
-        top: 170px;
-        left: 40px;
-    }
+    top: 60%;
+    left: 60%;
 }
